chore: Update typePerson value in FormsCmoComponent to use TIPOPERSONA.Natural
feat: Add FirmaComponent and DatosContactoEmergenciaComponent

feat: Create DatosContratistaComponent for vinculation form

feat: Update vinculacion-natural.component.html to include new form components

chore: Add imports for new components in FirmaComponent and DatosContactoEmergenciaComponent

chore: Add imports for new components in DatosContratistaComponent

create molecules as reusable components

create natural form

initial commit

--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -1,1 +1,16 @@
-
+<form>
+  <app-initial-data />
+  <app-datos-contratista />
+  <app-datos-contables-fiscales />
+  <app-datos-salud />
+  <app-datos-contacto-emergencia />
+  <app-personas-expuestas-politicamente />
+  <app-declaracion-pep />
+  <app-declaracion-sagrilaft />
+  <app-acuerdo-confidencialidad />
+  <app-autorizacion-datos-personales />
+  <app-firma />
+  <div class="row">
+    <app-black-button [name]="'enviar formulario'" class="col-4 col-start-third center-element big-gap" />
+  </div>
+</form>
