--- a/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
+++ b/src/app/components/molecules/persona-diligencia-formulario/persona-diligencia-formulario.component.html
@@ -1,10 +1,16 @@
 <app-subtitle [subtitle]="'persona que diligenció el formulario'" />
 <div class="row">
-  <app-text-input [label]="'Nombre y Apellidos'" class="col-4" />
+  <app-text-input [label]="'Nombres y Apellidos'" class="col-4" />
   <app-text-input [label]="'Número de documento'" class="col-4" />
   <app-text-input [label]="'Cargo'" class="col-4" />
 </div>
 <div class="row">
-  <app-text-input [label]="'Celular'" class="col-4" />
-  <app-text-input [label]="'Correo electrónico'" class="col-4" />
+  <label class="col-12">Firma</label>
+  <app-filebox 
+    class="col-4"
+  />
+</div>
+<div class="row">
+  <app-text-input [label]="'Nombre representante legal'" class="col-4" />
+  <app-text-input [label]="'Cédula representante legal'" class="col-4" />
 </div>
