--- a/src/app/components/molecules/initial-data/initial-data.component.html
+++ b/src/app/components/molecules/initial-data/initial-data.component.html
@@ -3,12 +3,16 @@
     [label]="'Tipo de Solicitud'"
     [placeholder]="'VINCULACION'"
     [description]="'Type of application'"
+    [controlName]="'tipoSolicitud'"
     class="col-5"
-  />
+    (setFormValue)="setValue($event.controlName, $event.value)"
+  ></app-text-input>
   <app-text-input 
     [label]="'Fecha de Solicitud'"
     [placeholder]="'21/03/2024'"
+    [controlName]="'fechaSolicitud'"
     [description]="'Date of application'"
     class="col-5"
+    (setFormValue)="setValue($event.controlName, $event.value)"
   ></app-text-input>
 </div>
