--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -1,21 +1,30 @@
-<form>
-  <app-initial-data />
-  <app-datos-empresa />
-  <app-datos-representante-legal />
-  <app-datos-factura-electronica />
-  <app-datos-contabilidad />
-  <app-datos-fiscales />
-  <app-datos-tesoreria />
-  <app-datos-contacto-comercial />
-  <app-datos-financieros />
-  <app-autorizacion-datos-personales />
-  <app-personas-expuestas-politicamente />
-  <app-declaracion-pep />
-  <app-declaracion-sagrilaft />
-  <app-acuerdo-confidencialidad />
-  <app-informacion-financiera />
-  <app-persona-diligencia-formulario />
+<form [formGroup]="juridicaForm" (ngSubmit)="sendForm()">
+  <app-initial-data 
+    (setFormValue)="setFormValue($event.controlName, $event.value)"
+  />
+
+  <!-- Uncomment these lines as needed for the form -->
+  <!-- <app-datos-empresa></app-datos-empresa> -->
+  <!-- <app-datos-representante-legal></app-datos-representante-legal> -->
+  <!-- <app-datos-factura-electronica></app-datos-factura-electronica> -->
+  <!-- <app-datos-contabilidad></app-datos-contabilidad> -->
+  <!-- <app-datos-fiscales></app-datos-fiscales> -->
+  <!-- <app-datos-tesoreria></app-datos-tesoreria> -->
+  <!-- <app-datos-contacto-comercial></app-datos-contacto-comercial> -->
+  <!-- <app-datos-financieros></app-datos-financieros> -->
+  <!-- <app-autorizacion-datos-personales></app-autorizacion-datos-personales> -->
+  <!-- <app-personas-expuestas-politicamente></app-personas-expuestas-politicamente> -->
+  <!-- <app-declaracion-pep></app-declaracion-pep> -->
+  <!-- <app-declaracion-sagrilaft></app-declaracion-sagrilaft> -->
+  <!-- <app-acuerdo-confidencialidad></app-acuerdo-confidencialidad> -->
+  <!-- <app-informacion-financiera></app-informacion-financiera> -->
+  <!-- <app-persona-diligencia-formulario></app-persona-diligencia-formulario> -->
+
   <div class="row">
-    <app-black-button [name]="'enviar formulario'" class="col-4 col-start-third center-element big-gap" />
+    <app-black-button
+      [name]="'enviar formulario'"
+      class="col-4 col-start-third center-element big-gap"
+      (onClick)="sendForm()"
+    ></app-black-button>
   </div>
 </form>
