--- a/src/app/components/atoms/black-button/black-button.component.html
+++ b/src/app/components/atoms/black-button/black-button.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-dark" (click)="handleClick()">
+<button [type]="type" class="btn btn-dark" (click)="handleClick()">
   {{ name }}
 </button>
