--- a/src/app/components/atoms/text-input/text-input.component.html
+++ b/src/app/components/atoms/text-input/text-input.component.html
@@ -2,4 +2,6 @@
   <label>{{ label }}</label>
   <small>{{ description }}</small>
   <input type="text" [placeholder]="placeholder" (input)="setValue($event)" />
+  @if(error)
+    {<small class="error">{{ error }}</small>}
 </div>
