--- a/src/app/components/molecules/datos-empresa/datos-empresa.component.html
+++ b/src/app/components/molecules/datos-empresa/datos-empresa.component.html
@@ -1,27 +1,33 @@
 <app-subtitle [subtitle]="'datos de la empresa'" />
 <div class="row">
-  <app-select-input
+  <app-text-input
     [label]="'Razón Social'"
     class="col-3"
+    [control]="getControl('name')"
   />
   <app-text-input
     [label]="'NIT'"
     class="col-3"
+    [control]="getControl('document')"
   />
   <app-text-input
     [label]="'Dirección Empresa'"
     class="col-6"
+    [control]="getControl('address')"
   />
   <app-text-input
     [label]="'Ciudad donde está ubicada la empresa'"
     class="col-4"
+    [control]="getControl('city')"
   />
   <app-text-input
     [label]="'Teléfonos de contacto'"
     class="col-4"
+    [control]="getControl('phone')"
   />
   <app-text-input
     [label]="'Correo electrónico'"
     class="col-4"
+    [control]="getControl('email')"
   />
 </div>
