--- a/src/app/components/molecules/datos-financieros/datos-financieros.component.html
+++ b/src/app/components/molecules/datos-financieros/datos-financieros.component.html
@@ -3,34 +3,73 @@
   <p class="col-12">
     Valor de los Activos
   </p>
-  <app-text-input [label]="'Último cierre contable'" class="col-4" />
-  <app-text-input [label]="'Año anterior'" class="col-4" />
+  <app-text-input 
+    [label]="'Último cierre contable'"
+    [control]="getControl('last_close_assets')" 
+    class="col-4" />
+  <app-text-input 
+    [label]="'Año anterior'"
+    [control]="getControl('last_year_assets')"
+    class="col-4" 
+  />
 </div>
 <div class="row">
   <p class="col-12">
     Valor de los pasivos
   </p>
-  <app-text-input [label]="'Último cierre contable'" class="col-4" />
-  <app-text-input [label]="'Año anterior'" class="col-4" />
+  <app-text-input 
+    [label]="'Último cierre contable'"
+    [control]="getControl('last_close_liabilities')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Año anterior'"
+    [control]="getControl('last_year_liabilities')"
+    class="col-4" 
+  />
 </div>
 <div class="row">
   <p class="col-12">
     Valor de patrimonio
   </p>
-  <app-text-input [label]="'Último cierre contable'" class="col-4" />
-  <app-text-input [label]="'Año anterior'" class="col-4" />
+  <app-text-input 
+    [label]="'Último cierre contable'"
+    [control]="getControl('last_close_equity')" 
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Año anterior'"
+    [control]="getControl('last_year_equity')" 
+    class="col-4" 
+  />
 </div>
 <div class="row">
   <p class="col-12">
     Ingresos
   </p>
-  <app-text-input [label]="'Último cierre contable'" class="col-4" />
-  <app-text-input [label]="'Año anterior'" class="col-4" />
+  <app-text-input 
+    [label]="'Último cierre contable'"
+    [control]="getControl('last_close_income')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Año anterior'"
+    [control]="getControl('last_year_income')" 
+    class="col-4" 
+  />
 </div>
 <div class="row">
   <p class="col-12">
     Egresos
   </p>
-  <app-text-input [label]="'Último cierre contable'" class="col-4" />
-  <app-text-input [label]="'Año anterior'" class="col-4" />
+  <app-text-input 
+    [label]="'Último cierre contable'"
+    [control]="getControl('last_close_expenses')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Año anterior'"
+    [control]="getControl('last_year_expenses')" 
+    class="col-4"
+  />
 </div>
