--- a/src/app/components/molecules/datos-representante-legal/datos-representante-legal.component.html
+++ b/src/app/components/molecules/datos-representante-legal/datos-representante-legal.component.html
@@ -3,18 +3,22 @@
   <app-text-input
     [label]="'Nombres y Apellidos Completos'"
     [description]="'(tal como aparece en su documento de identidad)'"
+    [control]="getControl('legal_representatives_name')"
     class="col-4"
   />
   <app-text-input
     [label]="'Número de documento'"
+    [control]="getControl('f_document_representative')"
     class="col-4"
   />
   <app-text-input
     [label]="'Celular'"
+    [control]="getControl('legal_representatives_phone')"
     class="col-4"
   />
   <app-text-input
     [label]="'Correo electrónico'"
+    [control]="getControl('legal_representatives_email')"
     class="col-4"
   />
 </div>
