--- a/src/app/components/molecules/initial-data/initial-data.component.html
+++ b/src/app/components/molecules/initial-data/initial-data.component.html
@@ -3,19 +3,15 @@
     [label]="'Tipo de Solicitud'"
     [placeholder]="'VINCULACION'"
     [description]="'Type of application'"
-    [controlName]="'tipoSolicitud'"
-    [error]="getErrors('tipoSolicitud')"
+    [control]="getControl('type')"
     class="col-5"
-    (setFormValue)="setValue($event.controlName, $event.value)"
+
   ></app-text-input>
 
   <app-text-input 
     [label]="'Fecha de Solicitud'"
     [placeholder]="'21/03/2024'"
-    [controlName]="'fechaSolicitud'"
-    [description]="'Date of application'"
-    [error]="getErrors('fechaSolicitud')"
+    [control]="getControl('date')"
     class="col-5"
-    (setFormValue)="setValue($event.controlName, $event.value)"
   ></app-text-input>
 </div>
