--- a/src/app/components/molecules/datos-contacto-comercial/datos-contacto-comercial.component.html
+++ b/src/app/components/molecules/datos-contacto-comercial/datos-contacto-comercial.component.html
@@ -2,14 +2,17 @@
 <div class="row">
   <app-text-input
     [label]="'Nombre Responsable'"
+    [control]="getControl('commercial_responsible_name')"
     class="col-4"
   />
   <app-text-input
     [label]="'Celular'"
+    [control]="getControl('commercial_responsible_phone')"
     class="col-4"
   />
   <app-text-input
     [label]="'Correo electrónico'"
+    [control]="getControl('commercial_responsible_email')"
     class="col-4"
   />
   <p class="col-12">
