--- a/src/app/components/molecules/datos-tesoreria/datos-tesoreria.component.html
+++ b/src/app/components/molecules/datos-tesoreria/datos-tesoreria.component.html
@@ -2,18 +2,22 @@
 <div class="row">
   <app-text-input
     [label]="'Nombre y Apellidos Responsable'"
+    [control]="getControl('treasury_responsible_name')"
     class="col-4"
   />
   <app-text-input
     [label]="'Celular'"
+    [control]="getControl('treasury_responsible_phone')"
     class="col-4"
   />
   <app-text-input
     [label]="'Correo electrónico'"
+    [control]="getControl('treasury_responsible_email')"
     class="col-4"
   />
   <app-text-input
     [label]="'Cargo'"
+    [control]="getControl('treasury_responsible_position')"
     class="col-4"
   />
   
