--- a/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
+++ b/src/app/components/molecules/informacion-financiera/informacion-financiera.component.html
@@ -3,19 +3,59 @@
   <p class="col-12">
     Último cierre contable
   </p>
-  <app-text-input [label]="'Valor de los Activos'" class="col-4" />
-  <app-text-input [label]="'Valor de los pasivos'" class="col-4" />
-  <app-text-input [label]="'Valor de patrimonio'" class="col-4" />
-  <app-text-input [label]="'Ingresos'" class="col-4" />
-  <app-text-input [label]="'Egresos'" class="col-4" />
+  <app-text-input 
+    [label]="'Valor de los Activos'"
+    [control]="getControl('last_close_assets')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Valor de los pasivos'"
+    [control]="getControl('last_close_liabilities')" 
+    class="col-4"
+  />
+  <app-text-input 
+    [label]="'Valor de patrimonio'"
+    [control]="getControl('last_close_equity')" 
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Ingresos'"
+    [control]="getControl('last_close_income')" 
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Egresos'"
+    [control]="getControl('last_close_expenses')" 
+    class="col-4" 
+  />
 </div>
 <div class="row">
   <p class="col-12">
     Año anterior al último cierre contable
   </p>
-  <app-text-input [label]="'Valor de los Activos'" class="col-4" />
-  <app-text-input [label]="'Valor de los pasivos'" class="col-4" />
-  <app-text-input [label]="'Valor de patrimonio'" class="col-4" />
-  <app-text-input [label]="'Ingresos'" class="col-4" />
-  <app-text-input [label]="'Egresos'" class="col-4" />
+  <app-text-input 
+    [label]="'Valor de los Activos'" 
+    [control]="getControl('last_year_assets')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Valor de los pasivos'"
+    [control]="getControl('last_year_liabilities')" 
+    class="col-4" 
+  />
+  <app-text-input  
+    [label]="'Valor de patrimonio'"
+    [control]="getControl('last_year_equity')" 
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Ingresos'"
+    [control]="getControl('last_year_income')"
+    class="col-4" 
+  />
+  <app-text-input 
+    [label]="'Egresos'"
+    [control]="getControl('last_year_expenses')" 
+    class="col-4"
+  />
 </div>
