--- a/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
+++ b/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
@@ -14,5 +14,6 @@
 <app-checkbox-input 
   [label]="'¿Es persona expuesta políticamente?'"
   [control]="getControl('is_pep')"
+  [controlName]="'is_pep'"
   class="col-12" 
 />
