--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -1,32 +1,14 @@
 <form [formGroup]="juridicaForm" (ngSubmit)="sendForm()">
-  <app-initial-data 
-     [form]="juridicaForm"
-  />
-  <app-datos-empresa 
-    [form]="juridicaForm"
-  />
-  <app-datos-representante-legal 
-    [form]="juridicaForm"
-  />
-  <app-datos-factura-electronica
-    [form]="juridicaForm"
-  />
-  <app-datos-contabilidad
-    [form]="juridicaForm"
-  />
-  <app-datos-fiscales
-    [form]="juridicaForm"
-  />
-  <app-datos-tesoreria
-    [form]="juridicaForm"
-  />
-  <app-datos-contacto-comercial
-    [form]="juridicaForm"
-  /> 
+  <app-initial-data [form]="juridicaForm" />
+  <app-datos-empresa [form]="juridicaForm" />
+  <app-datos-representante-legal [form]="juridicaForm" />
+  <app-datos-factura-electronica [form]="juridicaForm" />
+  <app-datos-contabilidad [form]="juridicaForm" />
+  <app-datos-fiscales [form]="juridicaForm" />
+  <app-datos-tesoreria [form]="juridicaForm" />
+  <app-datos-contacto-comercial [form]="juridicaForm" /> 
   <app-autorizacion-datos-personales />
-  <app-personas-expuestas-politicamente
-    [form]="juridicaForm"
-  />
+  <app-personas-expuestas-politicamente [form]="juridicaForm" />
   @if(juridicaForm.get('is_pep')?.value == '1'){
     <app-declaracion-pep />
   }
@@ -34,12 +16,8 @@
   <app-acuerdo-confidencialidad
     [form]="juridicaForm"
   />
-  <app-informacion-financiera
-    [form]="juridicaForm"
-  />
-  <app-persona-diligencia-formulario
-    [form]="juridicaForm"
-  />
+  <app-informacion-financiera [form]="juridicaForm" />
+  <app-persona-diligencia-formulario [form]="juridicaForm" />
   <div class="row">
       <app-black-button
         [name]="'enviar formulario'"
