--- a/src/app/components/molecules/datos-fiscales/datos-fiscales.component.html
+++ b/src/app/components/molecules/datos-fiscales/datos-fiscales.component.html
@@ -7,15 +7,18 @@
   <app-checkbox-input 
     [label]="'¿Pertenece al régimen simple?'"
     [control]="getControl('simple_regime')"
+    [controlName]="'simple_regime'"
     class="col-12"/>
   <app-checkbox-input 
     [label]="'¿Es autoretenedor?'" 
     class="col-12"
     [control]="getControl('self_withholding')"
+    [controlName]="'self_withholding'"
   />
   <app-checkbox-input 
     [label]="'¿Es gran contribuyente?'"
     [control]="getControl('big_contributor')"
+    [controlName]="'big_contributor'"
     class="col-12"
   />
 </div>
