--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -1,16 +1,22 @@
-<form>
-  <app-initial-data />
-  <app-datos-contratista />
-  <app-datos-contables-fiscales />
-  <app-datos-salud />
-  <app-datos-contacto-emergencia />
-  <app-personas-expuestas-politicamente />
-  <app-declaracion-pep />
+<form [formGroup]="naturalForm" (ngSubmit)="sendForm()">
+  <app-initial-data [form]="naturalForm" />
+  <app-datos-contratista [form]="naturalForm"/>
+  <app-datos-contables-fiscales [form]="naturalForm"/>
+  <app-datos-salud [form]="naturalForm"/>
+  <app-datos-contacto-emergencia [form]="naturalForm"/>
+  <app-personas-expuestas-politicamente [form]="naturalForm"/>
+  @if(naturalForm.get('is_pep')?.value == '1'){
+    <app-declaracion-pep />
+  }
   <app-declaracion-sagrilaft />
-  <app-acuerdo-confidencialidad />
+  <app-acuerdo-confidencialidad [form]="naturalForm"/>
   <app-autorizacion-datos-personales />
   <app-firma />
   <div class="row">
-    <app-black-button [name]="'enviar formulario'" class="col-4 col-start-third center-element big-gap" />
+    <app-black-button
+        [name]="'enviar formulario'"
+        [type]="'submit'"
+        class="col-4 col-start-third center-element big-gap"
+      ></app-black-button>
   </div>
 </form>
