--- a/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
+++ b/src/app/components/molecules/datos-contables-fiscales/datos-contables-fiscales.component.html
@@ -6,7 +6,7 @@
     class="col-10"
   />
   <app-checkbox-input
-    [label]="'Es declarante de Impuestos de Renta'"
+    [label]="'¿Es declarante de Impuestos de Renta?'"
     [control]="getControl('income_tax_declarant')"
     [controlName]="'income_tax_declarant'"
     class="col-12"
@@ -42,7 +42,7 @@
     class="col-12"
   />
   <app-checkbox-input
-    [label]="'Es responsable de facturar IVA'"
+    [label]="'¿Es responsable de facturar IVA?'"
     [control]="getControl('vat_responsible')"
     [controlName]="'vat_responsible'"
     class="col-12"
