--- a/src/app/components/molecules/datos-contacto-emergencia/datos-contacto-emergencia.component.html
+++ b/src/app/components/molecules/datos-contacto-emergencia/datos-contacto-emergencia.component.html
@@ -2,16 +2,16 @@
 <div class="row">
   <app-text-input 
     [label]="'Nombre del contacto en caso de emergencia'" 
-    [control]="getControl('emergency_name')"
+    [control]="getControl('emergency_contact_name')"
     class="col-4"
   ></app-text-input>
   <app-text-input 
     [label]="'Teléfono de contacto'"
-    [control]="getControl('emergency_phone')"
+    [control]="getControl('emergency_contact_phone')"
     class="col-4"></app-text-input>
   <app-text-input 
     [label]="'Parentesco'"
-    [control]="getControl('emergency_relationship')"
+    [control]="getControl('emergency_contact_relation')"
     class="col-4"
   ></app-text-input>
 </div>
