--- a/src/app/components/molecules/datos-contratista/datos-contratista.component.html
+++ b/src/app/components/molecules/datos-contratista/datos-contratista.component.html
@@ -49,7 +49,7 @@
   />
   <app-text-input
     [label]="'Celular / Teléfono de Contacto'"
-    [control]="getControl('phone')"
+    [control]="getControl('telephone')"
     class="col-4"
   />
   <app-text-input
