--- a/src/app/components/molecules/datos-empresa/datos-empresa.component.html
+++ b/src/app/components/molecules/datos-empresa/datos-empresa.component.html
@@ -23,7 +23,7 @@
   <app-text-input
     [label]="'Teléfonos de contacto'"
     class="col-4"
-    [control]="getControl('phone')"
+    [control]="getControl('telephone')"
   />
   <app-text-input
     [label]="'Correo electrónico'"
